@startuml

class AccountStatusUI {
}

class Account {
profile : Profile
name : String
email : String
phone : String
photo : Photo
isActive : boolean
activateAccount()
}

class AccountStatusController {
accountList : AccountList
changeAccountStatus(email, active)
}

class "AccountList" {
accountList : AccountList
getAccount(email)
}

AccountStatusController "1"..> "1" Account
AccountStatusController "1" o-- "1  " "AccountList"
AccountList "1  " *-- "*" Account : has
AccountStatusUI "1" o-- "1" AccountStatusController

@enduml